src/components/UserForms/UserForms.css
form {
    margin: 2em;
    width: 25%;
    margin: 1em auto;
}

input {
    display: table;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 0.5em;
    width: 100%;
    padding: 0.25em 0;
}

.userform button {
    background-color: #33cc33;
    border-color: #99ff99;
    color: #FFFFFF;
    border-radius: 0.5em;
    width: 100%;
    height: 3em;
    padding: 0;
}

button:hover {
    background-color: #009900;
    cursor: pointer;
}

.userform {
    text-align: center;
    margin: 1em;
}

